Fix horizontal overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,6 @@
 	}
 
 	body {
-		@apply bg-gray-100 text-gray-600;
+		@apply w-screen overflow-x-hidden bg-gray-100 text-gray-600;
 	}
 }
